# aroundme

./: .gitignore  Procfile  pyproject.toml
client/: index.html
server/: .gitignore  pyproject.toml  requirements.txt
server/src/: main.py
server/src/controllers/http/: __init__.py  _events.py
server/src/services/: __init__.py  _events.py
server/src/utils/: logging.py
src/: main.py
src/controllers/http/: __init__.py  _html.py  _router.py
src/templates/: index.jinja2
src/utils/: rand.py
